--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@ limitations under the License.
   </parent>
 
   <artifactId>steelwheels-data-hsqldb</artifactId>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>steelwheels-data-hsqldb</name>
@@ -92,7 +92,7 @@ limitations under the License.
     <connection>scm:git:git://github.com/julianhyde/steelwheels-data-hsqldb.git</connection>
     <developerConnection>scm:git:git@github.com:julianhyde/steelwheels-data-hsqldb.git</developerConnection>
     <url>scm:git:git://github.com/julianhyde/steelwheels-data-hsqldb.git</url>
-    <tag>steelwheels-data-hsqldb-0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <prerequisites>
