Add a unit test

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@ limitations under the License.
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <top.dir>${project.basedir}</top.dir>
+
+    <!-- Versions in alphabetical order. -->
+    <hsqldb.version>2.3.1</hsqldb.version>
+    <junit.version>4.13.2</junit.version>
   </properties>
 
   <!-- Environment settings. -->
@@ -98,6 +102,21 @@ limitations under the License.
   <prerequisites>
     <maven>3.2.1</maven><!-- prerequisite of some plugins -->
   </prerequisites>
+
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>${hsqldb.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
   <build>
     <!-- See parent POM -->
