--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       matrix:
         java-version: [ "8", "11", "17" ]
-        hsqldb-version: [ "2.0.0", "2.3.1" ]
+        hsqldb-version: [ "2.3.1" ]
         javadoc: [ false ]
         include:
           - java-version: "17"
