--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,15 @@ jobs:
     strategy:
       matrix:
         java-version: [ "8", "11", "17" ]
-        hsqldb-version: [ "2.3.1" ]
+        hsqldb-version: [ "2.0.0", "2.3.1", "2.5.2", "2.6.1" ]
         javadoc: [ false ]
+        exclude:
+          # hsqldb >= 2.6 requires JRE >= 11
+          - java-version: "8"
+            hsqldb-version: "2.6.1"
         include:
           - java-version: "17"
-            hsqldb-version: "2.3.1"
+            hsqldb-version: "2.6.1"
             javadoc: true
 
     steps:
