Allow CI runs to be triggered manually, and monthly

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,15 @@
 #
 name: Java CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - '*'
+  workflow_dispatch: # allow manual triggering
+  schedule:
+    # Run at 0543 UTC on the 7th day of each month
+    #        m  h  dom mon dow
+    - cron: '43 05   7   *   *'
 
 jobs:
   build:
